# tennis-simulator

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
analysis/calibration/: calibration_edge_deep.R  market_calibration_drift.R  platt_scaling.R
analysis/edge/: agree_less_confident_validation.R  edge_hunting.R  edge_hunting_creative.R  edge_hunting_deep.R  find_betting_edge_subsets.R  find_elo_edge_subsets.R  high_odds_validation.R  multiple_testing_correction.R  odds_range_trend.R  systematic_edge_search.R
analysis/features/: build_features.R  feature_testing.R  matchup_fatigue_features.R  paper_data_comparison.R  similarity_cosine.R  similarity_mahalanobis.R
analysis/model_variants/: angelini_elo.R  hybrid_elo_h2h.R  hybrid_elo_recency.R  hybrid_welo_ensemble.R  k_factor_sensitivity.R  scoreline_weighted_elo.R  welo_package_comparison.R
analysis/trajectory/: elo_market_disagreement_deep_dive.R  player_trajectory_analysis.R  trajectory_analysis.R  trajectory_ci.R  (+2 more)
code/: README.md  run_analysis.R  setup_renv_simple.R
docs/: quick_reference.md  simulator_guide.md
notebooks/: 01_serve_return_stats.ipynb  02_year_over_year_trends.ipynb  03_extended_trends_1991_2024.ipynb  04_charting_to_pointbypoint.ipynb
r_analysis/: .Rprofile  01_build_features.R  02_similarity_cosine.R  03_feature_testing.R  04_similarity_mahalanobis.R  spot_checks.R  utils.R
scripts/: README.md  compare_models.R  export_for_magnet.R  precompute_alignment.R  run_analysis.R  run_magnet.py  run_magnet_full.sh  setup_renv.R  sweep_opponents.py  validate_elo_betting.R
tests/: test_elo.R
(+67 files in other folders)
